# ai-pdf-task

./: .gitignore  README.md  package-lock.json  requirements.txt
backend/: .env  main.py  pyproject.toml
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: page.js
frontend/app/component/: PDFViewer.js  PDFViewer2.js  PDFViewer3.js
